# io_rebuild

./: Future Thoughts.txt  check_structure.py  pyproject.toml  readme-enhanced.txt  readme.md
apps/io_wake_word/: init.py  main.py
apps/io_wake_word/ui/: app.py  config_panel.py  training_panel.py
src/: __init__.py
src/io_wake_word.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/io_wake_word/audio/: capture.py  features.py  init.py  vad.py
src/io_wake_word/cli/: __init__.py  commands.py  main.py
src/io_wake_word/diagnostics/: analyzer.py  init.py  recovery.py
src/io_wake_word/models/: architecture.py  detector.py  init.py  trainer.py
src/io_wake_word/utils/: actions.py  config.py  init.py  paths.py
