[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "io_wake_word"
version = "0.2.0"
description = "A fully offline wake word detection engine using a lightweight CNN architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["wake word", "speech recognition", "voice assistant"]
authors = [
    {name = "Io Wake Word Engine Developer"}
]
dependencies = [
    "numpy>=1.20.0",
    "PyAudio>=0.2.11",
    "torch>=1.9.0",
    "librosa>=0.8.0",
    "tqdm>=4.62.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
ui = [
    "customtkinter>=5.1.2",
    "pillow>=8.0.0",
    "pystray>=0.19.0",
]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
]

[project.scripts]
io-wake-word = "io_wake_word.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}